# interview-prep

./: .gitignore  LICENSE  README.md  SPEC.md  cdk.context.json  cdk.json  compose.yaml  pyproject.toml
infra/: app.py  cdk_constructs.py  stack.py
infra/dockerfiles/: agent-lambda.Dockerfile  mcp-lambda.Dockerfile  subagent-lambda.Dockerfile
src/_shared/: auth.py
src/agent/: Dockerfile  agent.py  instructions.md  main.py  models.py
src/research_subagent/: Dockerfile  agent.py  instructions.md  main.py  main_a2a.py
src/tools/: Dockerfile  main.py  main_a2a.py  mcp.py  mcp_a2a.py  pdf-styles.css
ui/: Dockerfile  app.py  chainlit.md
ui/.chainlit/: config.toml
ui/utils/: auth.py  data_persistence.py
